2004-04-14  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* expression.cs (Binary.Emit): treat boolean operator
	specially. Added emit_jumping_code.
	* CodeGenerator.cs: Added emit_to_boolean. Added fall_true and
	fall_false, which will express all boolean expressions and control
	flow conditions. 

2004-04-02  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* Equality.cs: Moved the Emit and Resolve code here.
	* jscript-lexer-parser.g: Build a Equality object instead of a
	Binary object for equality_expr.
	* expression.cs: moved equality oeprators (resolve and IL gen) to
	Equality.Emit and Equality.Resolve.

2004-03-31  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* expression.cs: Added shift operators IL emit.
	* BitwiseBinary.cs: added constructor for building it according to
	JSToken enum. return a new object on EvaluateBitwiseBinary (this
	needs a real implementation).
	* expression.cs: added code for evaluation of bitwise operators at emit_op_eval.

	* Statement.cs: added stub for While and DoWhile ast
	representation (reworking my Emit code).
	* jscript-parser-lexer.g: allow iteration statement ast build.

	* FunctionDeclaration.cs: agrouped code for setting custom attribute.

	* expression.cs: added Modulo operator case.

2004-03-16  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* Convert.cs: added rule for string conversion.

	* Plus.cs: added rule for string addition.

	* PostOrPrefixOperator.cs: added constructor, returned to Microsoft.JScript ns, initial Resolve and
	Emit (cases where there's no real operator).

	* StringLiteral.cs: now implements Exp as can appear as a simple
	exp in global code. Added check for Pop generation.

	* expression.cs: added IL generation code for print func call. 
	Args class added get_element, Size and made Resolve behave as the
	others (collect the differents Resolve's return values from each
	of the arguments). Expression class, added default Resolve call
	for non-Exp implementers.
